force-app/main/default/objects/HRM_Configuration__c/HRM_Configuration__c.object-meta.xml
<CustomObject>
    <label>HRM Configuration</label>
    <nameField>
        <displayFormat>HRM-C-{000000}</displayFormat>
        <label>HRM Configuration</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRM Configurations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>