force-app/main/default/objects/HRM_Configuration__c/fields/Business_Reason__c.field-meta.xml
<CustomField>
    <fullName>Business_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>To be filled out during the consultation detailing the business need.</inlineHelpText>
    <label>Business Reason</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>