force-app/main/default/objects/HRM_Configuration__c/fields/Configuration_Name__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Field Update Name, Email Alert name, etc</inlineHelpText>
    <label>Configuration Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>