force-app/main/default/objects/HRM_Configuration__c/fields/Field_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Type__c</fullName>
    <label>Field Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Configuration_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Auto-Number</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Date/Time</fullName>
            </value>
            <value>
                <fullName>Duplication Rule</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>External Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Formula</fullName>
            </value>
            <value>
                <fullName>Geolocation</fullName>
            </value>
            <value>
                <fullName>Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Master-Detail Lookup Relationship</fullName>
            </value>
            <value>
                <fullName>Matching Rule</fullName>
            </value>
            <value>
                <fullName>Menu/Item</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Picklist</fullName>
            </value>
            <value>
                <fullName>Picklist (Multi-Select)</fullName>
            </value>
            <value>
                <fullName>Roll-Up Summary</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>Text Area</fullName>
            </value>
            <value>
                <fullName>Text Area (Encrypted)</fullName>
            </value>
            <value>
                <fullName>Text Area (Long)</fullName>
            </value>
            <value>
                <fullName>Text Area (Rich)</fullName>
            </value>
            <value>
                <fullName>URL</fullName>
            </value>
            <value>
                <fullName>Validation Rule</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>