force-app/main/default/objects/HRM_Configuration__c/fields/Level_Of_Access__c.field-meta.xml
<CustomField>
    <fullName>Level_Of_Access__c</fullName>
    <label>Level Of Access</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Read Only</fullName>
            </value>
            <value>
                <fullName>Read/Write</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>