force-app/main/default/objects/HRM_Configuration__c/fields/Out_of_Scope_Reason__c.field-meta.xml
<CustomField>
    <fullName>Out_of_Scope_Reason__c</fullName>
    <description>Select the reason the configuration was classified as out of scope</description>
    <inlineHelpText>Select the reason the configuration was classified as out of scope</inlineHelpText>
    <label>Out of Scope Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Status__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Application Limitation</fullName>
            </value>
            <value>
                <fullName>Insufficient Time</fullName>
            </value>
            <value>
                <fullName>Platform Limitation</fullName>
            </value>
            <value>
                <fullName>Requires Custom Code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>