force-app/main/default/objects/HRM_Configuration__c/fields/Owned_By_Role_Name__c.field-meta.xml
<CustomField>
    <fullName>Owned_By_Role_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>What role name in the Role Hierarch owns the records?</inlineHelpText>
    <label>Owned By Role Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>