force-app/main/default/objects/HRM_Configuration__c/fields/Reason_For_Hold__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Hold__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>If the Task is On Hold, include a description here of why</inlineHelpText>
    <label>Reason For Hold</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>