force-app/main/default/objects/HRM_Configuration__c/fields/Records_Owned_By__c.field-meta.xml
<CustomField>
    <fullName>Records_Owned_By__c</fullName>
    <label>Records Owned By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Groups</fullName>
            </value>
            <value>
                <fullName>Roles</fullName>
            </value>
            <value>
                <fullName>Roles &amp; Subordinates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>