force-app/main/default/objects/HRM_Configuration__c/fields/Rule_Type__c.field-meta.xml
<CustomField>
    <fullName>Rule_Type__c</fullName>
    <label>Rule Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Based on Record Owner</fullName>
            </value>
            <value>
                <fullName>Based on Criteria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>