force-app/main/default/objects/HRM_Configuration__c/fields/Share_With__c.field-meta.xml
<CustomField>
    <fullName>Share_With__c</fullName>
    <label>Share With</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Public Groups</fullName>
            </value>
            <value>
                <fullName>Roles</fullName>
            </value>
            <value>
                <fullName>Roles &amp; Subordinates</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>