force-app/main/default/objects/HRM_Configuration__c/fields/Time_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Complete__c</fullName>
    <label>Time to Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>