force-app/main/default/objects/HRM_Configuration__c/fields/Workflow_Action_Time_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Workflow_Action_Time_Trigger__c</fullName>
    <label>Workflow Action Time Trigger</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Immediate</fullName>
            </value>
            <value>
                <fullName>Time-Dependent</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>