force-app/main/default/objects/HRM_Configuration__c/recordTypes/General_Configuration.recordType-meta.xml
<RecordType>
    <fullName>General_Configuration</fullName>
    <active>true</active>
    <description>Fields, Views, etc</description>
    <label>General Configuration</label>
</RecordType>