force-app/main/default/objects/HRM_Configuration__c/recordTypes/Security.recordType-meta.xml
<RecordType>
    <fullName>Security</fullName>
    <active>true</active>
    <description>Configurations to Security</description>
    <label>Security</label>
</RecordType>