force-app/main/default/objects/HRM_Configuration__c/recordTypes/Workflow.recordType-meta.xml
<RecordType>
    <fullName>Workflow</fullName>
    <active>true</active>
    <description>Workflows and Approval Processes</description>
    <label>Workflow</label>
</RecordType>