force-app/main/default/objects/HRM_Configuration__c/validationRules/CompletedConfigurationNameCannotBeBlank.validationRule-meta.xml
<ValidationRule>
    <fullName>CompletedConfigurationNameCannotBeBlank</fullName>
    <active>true</active>
    <description>If the status = Completed the Configuration Name cannot be blank</description>
    <errorConditionFormula>AND( Text(Status__c) = &quot;Completed&quot;,  ISBLANK(Configuration_Name__c ))</errorConditionFormula>
    <errorMessage>When the status is marked as completed, the Configuration Name must be filled in.</errorMessage>
</ValidationRule>