force-app/main/default/objects/HRM_Configuration__c/validationRules/Config_Detail_and_Type_are_Blank.validationRule-meta.xml
<ValidationRule>
    <fullName>Config_Detail_and_Type_are_Blank</fullName>
    <active>true</active>
    <description>Salesforce.com Change Request: NICC-017304

Configuration Type and Detail cannot both be blank. Please update at least one of the fields.</description>
    <errorConditionFormula>ISPICKVAL(Configuration_Type__c, &quot;&quot;) &amp;&amp; LEN(Trim(Configuration_Details__c)) &lt;= 1</errorConditionFormula>
    <errorMessage>The Configuration Details or Type need to be filled in.</errorMessage>
</ValidationRule>