force-app/main/default/objects/HRM_Configuration__c/validationRules/On_Hold_Requires_Description.validationRule-meta.xml
<ValidationRule>
    <fullName>On_Hold_Requires_Description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL( Status__c , &quot;On Hold&quot;), ISBLANK( Reason_For_Hold__c ) )</errorConditionFormula>
    <errorDisplayField>Reason_For_Hold__c</errorDisplayField>
    <errorMessage>Enter a reason why this is On Hold</errorMessage>
</ValidationRule>