force-app/main/default/objects/HRM_Configuration__c/validationRules/Out_of_Scope_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Out_of_Scope_Reason</fullName>
    <active>true</active>
    <description>If the status of &quot;Out of Scope&quot; is selected the reason field must be updated</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Out of Scope&quot;), ISPICKVAL( Out_of_Scope_Reason__c, &quot;&quot;))</errorConditionFormula>
    <errorDisplayField>Out_of_Scope_Reason__c</errorDisplayField>
    <errorMessage>When the out of scope status has been selected, the out of scope reason must be filled in.</errorMessage>
</ValidationRule>